--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: public_transformer_bach
+name: tbach
 channels:
   - pytorch
   - defaults
@@ -8,17 +8,17 @@ dependencies:
   - ca-certificates=2020.1.1
   - certifi=2019.11.28
   - click=7.1.1
-  - cudatoolkit=10.1.243 #
+  - cudatoolkit=10.1.243
   - freetype=2.9.1
   - intel-openmp=2020.0
   - jpeg=9b
-  - ld_impl_linux-64=2.33.1 #
+  - ld_impl_linux-64=2.33.1
   - libedit=3.1.20181209
   - libffi=3.2.1
-  - libgcc-ng=9.1.0 #
-  - libgfortran-ng=7.3.0 #
+  - libgcc-ng=9.1.0
+  - libgfortran-ng=7.3.0
   - libpng=1.6.37
-  - libstdcxx-ng=9.1.0 #
+  - libstdcxx-ng=9.1.0
   - libtiff=4.1.0
   - mkl=2020.0
   - mkl-service=2.3.0
@@ -29,7 +29,7 @@ dependencies:
   - numpy=1.18.1
   - numpy-base=1.18.1
   - olefile=0.46
-  - openssl=1.1.1e
+  - openssl=1.1.1f
   - pillow=7.0.0
   - pip=20.0.2
   - python=3.7.6
@@ -50,25 +50,36 @@ dependencies:
     - cachetools==4.0.0
     - chardet==3.0.4
     - cycler==0.10.0
+    - future==0.18.2
     - google-auth==1.11.3
     - google-auth-oauthlib==0.4.1
     - grpcio==1.27.2
     - idna==2.9
+    - joblib==0.14.1
     - kiwisolver==1.1.0
     - markdown==3.2.1
     - matplotlib==3.2.0
+    - midi2audio==0.1.1
+    - mido==1.2.9
     - music21==5.7.2
     - oauthlib==3.1.0
+    - pandas==1.0.3
+    - pretty-midi==0.2.8
     - protobuf==3.11.3
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
+    - pyfluidsynth==1.2.5
     - pyparsing==2.4.6
     - python-dateutil==2.8.1
+    - pytz==2019.3
     - requests==2.23.0
     - requests-oauthlib==1.3.0
     - rsa==4.0
+    - scikit-learn==0.22.2.post1
+    - scipy==1.4.1
+    - sklearn==0.0
     - tensorboard==2.1.1
     - urllib3==1.25.8
     - werkzeug==1.0.0
-prefix: /home/gaetan/Public/Python/anaconda3/envs/public_transformer_bach
+prefix: /home/alisa/anaconda3/envs/tbach
 
